--- a/style.css
+++ b/style.css
@@ -2,10 +2,10 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: unset;
 }
 
 body {
+    font-family: 'Raleway', sans-serif;
     background-color: #344a72;
 }
 a {
@@ -13,16 +13,18 @@ a {
 }
 
 #container {
-    max-width: 500px;
+    max-width: 400px;
     max-height: 800px;
     margin: 25px auto;
-    padding: 30px;
+    padding: 20px;
 }
 
 .form-wrap {
     background-color: white;
     margin: 10px;
-    padding: 10px;
+    padding: 10px 25px;
+    border-radius: 5px;
+    color: #333;
 }
 
 .form-wrap h1, .form-wrap p {
@@ -30,27 +32,48 @@ a {
 }
 
 .form-wrap .form-group {
-
+    margin-top: 15px;
 }
 
 .form-wrap .form-group label {
     display: block;
-    text-align: left;
-    padding: 5px 0px 5px 0px;
+    color: #666;
 }
 
 .form-wrap .form-group input {
     width: 100%;
-    padding: 5px 10px;
+    padding: 10px 0px 5px 0px;
+    border-radius: 3px;
+    border: #ddd 1px solid;
 }
 
-.form-wrap .btn {
-    margin-top: 10px;
+.form-wrap button {
     display: block;
+    background-color: #49c1a2;
     width: 100%;
-    background-color: #49c1a2,
+    padding: 10px;
+    margin-top: 20px;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
 }
 
-.form-wrap .btn:hover {
-    background-color: #37a08e,
+.form-wrap button:hover {
+    background-color: #37a08e
+}
+
+.bottom-text {
+    font-size: 0.8em;
+    margin: 15px 0px;;
+}
+
+footer {
+    text-align: center;
+    font-size: 0.8em;
+    color: white;
+}
+
+footer a { 
+    color: #49c1a2
 }
